# datathinking.org-codespace

./: .gitignore  environment.yml  pyproject.toml
homeworks/: 230202-plot.ipynb  chat-analysis.ipynb  plot+linreg.ipynb  plot-linreg.ipynb
notebooks/: 230406-data-build-tool-for-zulip-chat-data.ipynb
